feat: add builder for auth candidate dto